# PGP

./: .zshrc  CMakeLists.txt  README.md  \  canculate.py  main.py  run.sh
include/: bodies.hpp  body.hpp  calc_helper.hpp  gui_elements.hpp  physics.hpp  process_bodies.hpp  process_thread.hpp  space.hpp  space_tasker.hpp  thread.hpp
src/: bodies.cpp  body.cpp  calc_helper.cpp  gui_elements.cpp  main.cpp  physics.cpp  process_bodies.cpp  process_thread.cpp  space.cpp  space_tasker.cpp  thread.cpp
src/gui_elements/: add_body.cpp  body_finder.cpp  body_params.cpp  control_panel.cpp  gui_main.cpp  name_changer.cpp  params_changer.cpp
tests/: CMakeLists.txt  CmakeLists.txt  main.cpp  main_tests.cpp  test_bodies.cpp  test_body.cpp  test_procces_thread.cpp  test_space.cpp  test_space_tasker.cpp  test_thread.cpp
tests/include/: test_bodies.hpp  test_body.hpp  test_space.hpp  test_space_tasker.hpp  test_thread.hpp  testinghelpers.hpp
